--- a/sqfa-shell-proto/sqfa-shell-proto/AppShell.xaml
+++ b/sqfa-shell-proto/sqfa-shell-proto/AppShell.xaml
@@ -81,7 +81,7 @@
     -->
     
     <FlyoutItem Title="Main" Icon="icon_about.png">
-        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+        <ShellContent Route="MainPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </FlyoutItem>
     <!--
     <FlyoutItem Title="Browse" Icon="icon_feed.png">
@@ -105,7 +105,7 @@
         await Shell.Current.GoToAsync("//LoginPage");
     -->
     <TabBar>
-        <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
+        <ShellContent ContentTemplate="{DataTemplate local:LoginPage}" />
     </TabBar>
 
     <!--TabBar>
