--- a/sqfa-shell-proto/sqfa-shell-proto/Views/AboutPage.xaml
+++ b/sqfa-shell-proto/sqfa-shell-proto/Views/AboutPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="sqfa_shell_proto.Views.AboutPage"
              xmlns:vm="clr-namespace:sqfa_shell_proto.ViewModels"
-             Title="{Binding Title}"
+             Title="My Main Page"
              Shell.FlyoutBehavior="Flyout"
              Shell.NavBarIsVisible="True"
              Shell.TabBarIsVisible="True"
